- update codemagic yaml

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,3 +41,6 @@ workflows:
       email:
         recipients:
           - harsh.panchal@kodytechnolab.com
+        notify:
+          success: true
+          failure: true
